--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav class="site-nav" aria-label="main navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="stories.html">Stories</a></li>
+            <li><a href="https://himanshug8.github.io/blog/">Blog</a></li>
+            <li><a href="https://himanshug8.github.io/stories/">Stories</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
