--- a/index.html
+++ b/index.html
@@ -19,20 +19,29 @@
 
     <main>
         <header>
-            <h1>Writer's Haven</h1>
-            <p>A space where stories and thoughts come alive.</p>
+            <h1>Himanshu Gupta archive</h1>
+            <p>A If you care about entropy, you wouldn't stop.</p>
         </header>
 
         <section>
             <h2>Welcome</h2>
-            <p>Welcome to my corner of the web! Here, you’ll find my latest blog posts, short stories, and musings about the art of writing. Explore, read, and feel free to share your thoughts.</p>
+            <p>Welcome to my corner of the web! Here, you’ll find my latest blog posts, short stories, and musings about anything that I am obsessed with right now. Explore, read, and feel free to share your thoughts.</p>
+        </section>
+
+        
+        <section>
+            <ul>
+                <li><a href="https://himanshug8.github.io/blog/thought,/thinker,/&/the/prisoner/of/self2024/10/24/We-are-but-puppets-in-this-capitalistic-society.html">We are but puppets in a capitalistic society.</a></li>
+                <li><a href="https://himanshug8.github.io/blog/thought,/thinker,/&/the/prisoner/of/self2024/11/14/what-should-a-writer-write-about.html">What should a writer write about.</a></li>
+                <li><a href="https://himanshug8.github.io/blog/thought,/thinker,/&/the/prisoner/of/self2024/11/11/I-am-ok-with-being-famous.html">I am ok with being famous.</a></li>
+            </ul>
         </section>
 
         <footer>
             <p>Last updated: Nov 24, 2024</p>
             <p>
-                <a href="https://github.com/writershaven" target="_blank" rel="noopener">Source Code</a> &middot;
-                <a href="/rss.xml">RSS Feed</a>
+                <a href="https://www.youtube.com/@HimanshuGuptaArchive" target="_blank" rel="noopener">youtube</a> &middot;
+                <a href="https://www.youtube.com/watch?v=EecZ1CewRKw&ab_channel=lolValley">Something to see</a>
             </p>
         </footer>
     </main>
